--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ name = "azfinsim"
 version = "0.0.1"
 dependencies = [
     "colorlog",
+    "natsort",
     "numpy",
     "opencensus-ext-azure",
     "pandas",
     "psutil",
-    "redis"
+    "redis",
 ]
