--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -8,7 +8,7 @@ on:
     - "v*"
 
 jobs:
-  docker:
+  docker-linux:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -33,3 +33,24 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+  docker-windows:
+      runs-on: windows-2022
+      steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/azfinsim
+          flavor: |
+            prefix=win-
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+      - name: Build and push
+        run: |
+          docker build -f ./Dockerfile.win -t ${{ join(steps.meta.outputs.tags, ' -t ') }} .
+          docker push ${{ join(steps.meta.outputs.tags, ' ') }}
